--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ script:
   - bundle exec jekyll build || travis_terminate 1
   - bundle exec jekyll doctor || travis_terminate 1
   - bundle exec mdl --style mdl-style.rb _posts || travis_terminate 1
+  - bundle exec htmlproofer ./_site --allow-hash-href --assume-extension --check-external-hash --check-favicon --check-html --check-img-http --check-opengraph --disable-external --empty-alt-ignore --internal-domains "blog.getbootstrap.com"
 cache: bundler
 notifications:
   email: false
